[gd_scene format=3 uid="uid://w5ordh80jat5"]

[ext_resource type="Script" uid="uid://dnfsssm5q22jm" path="res://addons/sprouty_dialogs/editor/components/scripts/dictionary_field.gd" id="1_ftcxb"]
[ext_resource type="StyleBox" uid="uid://cycxf34ecjihb" path="res://addons/sprouty_dialogs/editor/theme/dict_field_panel_highlight.tres" id="2_e11uo"]

[sub_resource type="DPITexture" id="DPITexture_vpchq"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#ff5d5d\" d=\"M2 1v8.586l1.293-1.293a1 1 0 0 1 1.414 0L7 10.587l2.293-2.293a1 1 0 0 1 1.414 0L13 10.586l1-1V6H9V1H2zm8 0v4h4zm-6 9.414-2 2V15h12v-2.586l-.293.293a1 1 0 0 1-1.414 0L10 10.414l-2.293 2.293a1 1 0 0 1-1.414 0L4 10.414z\"/></svg>
"

[node name="DictionaryField" type="VBoxContainer" unique_id=2007512970]
script = ExtResource("1_ftcxb")

[node name="CollapseButton" type="Button" parent="." unique_id=1421761635]
layout_mode = 2
size_flags_vertical = 0
toggle_mode = true
text = "Dictionary (size 0)"

[node name="ItemsPanel" type="PanelContainer" parent="." unique_id=79738903]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("2_e11uo")

[node name="ItemsContainer" type="VBoxContainer" parent="ItemsPanel" unique_id=1984531008]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AddButton" type="Button" parent="ItemsPanel/ItemsContainer" unique_id=1408646482]
layout_mode = 2
size_flags_horizontal = 4
text = "Add Element"
icon = SubResource("DPITexture_vpchq")
